new kernels added

--- a/dev/cuda/Makefile
+++ b/dev/cuda/Makefile
@@ -9,15 +9,15 @@ ifeq ($(NVCC),)
 endif
 
 ifneq ($(CI),true) # if not in CI, then use the GPU query
-  ifndef GPU_COMPUTE_CAPABILITY # set to defaults if: make GPU_COMPUTE_CAPABILITY=
+  ifndef GPU_COMPUTE_CAPABILITY # set to defaults if: make GPU_COMPUTE_CAPABILITY= 
     GPU_COMPUTE_CAPABILITY = $(shell __nvcc_device_query) # assume if NVCC is present, then this likely is too
     GPU_COMPUTE_CAPABILITY := $(strip $(GPU_COMPUTE_CAPABILITY))
   endif
 endif
 
 # Compiler flags
-ifeq ($(GPU_COMPUTE_CAPABILITY),) # set to defaults if: make GPU_COMPUTE_CAPABILITY=
-  CFLAGS = -O3 --use_fast_math
+ifeq ($(GPU_COMPUTE_CAPABILITY),) # set to defaults if: make GPU_COMPUTE_CAPABILITY= 
+  CFLAGS = -O3 --use_fast_math 
 else
   CFLAGS = -O3 --use_fast_math --generate-code arch=compute_$(GPU_COMPUTE_CAPABILITY),code=[compute_$(GPU_COMPUTE_CAPABILITY),sm_$(GPU_COMPUTE_CAPABILITY)]
 endif
@@ -30,8 +30,7 @@ MPI_PATHS = -I/usr/lib/x86_64-linux-gnu/openmpi/include -L/usr/lib/x86_64-linux-
 	$(NVCC) $(CFLAGS) $(NVCCFLAGS) $< -o $@
 
 # Build all targets
-TARGETS = adamw attention_backward attention_forward classifier_fused crossentropy_forward crossentropy_softmax_backward encoder_backward encoder_forward gelu_backward gelu_forward layernorm_backward layernorm_forward matmul_backward matmul_backward_bias matmul_forward nccl_all_reduce residual_forward softmax_forward trimat_forward fused_residual_forward  global_norm permute
-
+TARGETS = adamw attention_backward attention_forward classifier_fused crossentropy_forward crossentropy_softmax_backward encoder_backward encoder_forward gelu_backward gelu_forward layernorm_backward layernorm_forward matmul_backward matmul_backward_bias matmul_forward nccl_all_reduce residual_forward softmax_forward trimat_forward fused_residual_forward  global_norm rmsnorm_forward rmsnorm_backward apply_rope_forward apply_rope_backward attention_forward_gqa attention_backward_gqa swiglu_forward swiglu_backward repeat_kv_forward repeat_kv_backward
 all: $(TARGETS)
 all_ptx:  $(TARGETS:%=%.ptx)
 all_sass: $(TARGETS:%=%.sass)
@@ -51,6 +50,13 @@ trimat_forward: trimat_forward.cu
 matmul_forward: matmul_forward.cu
 	$(NVCC) $(CFLAGS) $(NVCCFLAGS) -Xcompiler -fopenmp matmul_forward.cu -o matmul_forward
 
+# LLaMA Kernels
+rmsnorm_forward: rmsnorm_forward.cu
+apply_rope_forward: apply_rope_forward.cu
+attention_forward_gqa: attention_forward_gqa.cu
+swiglu_forward: swiglu_forward.cu
+repeat_kv_forward: repeat_kv_forward.cu
+
 # Individual targets: backward pass
 attention_backward: attention_backward.cu
 crossentropy_softmax_backward: crossentropy_softmax_backward.cu
@@ -61,11 +67,16 @@ matmul_backward_bias: matmul_backward_bias.cu
 matmul_backward: matmul_backward.cu
 	$(NVCC) $(CFLAGS) $(NVCCFLAGS) -Xcompiler -fopenmp matmul_backward.cu -o matmul_backward
 
+# LLaMA Kernels
+rmsnorm_backward: rmsnorm_backward.cu
+apply_rope_backward: apply_rope_backward.cu
+attention_backward_gqa: attention_backward_gqa.cu
+swiglu_backward: swiglu_backward.cu
+repeat_kv_backward: repeat_kv_backward.cu
+
 # Update kernels
 adamw: adamw.cu
 global_norm: global_norm.cu
-
-permute: permute.cu
 
 # NCCL communication kernels
 nccl_all_reduce: nccl_all_reduce.cu
